--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                 <li><a href="#portfolio-section" class="nav-link">Photography</a></li>
                                 <!-- <li><a href="#blog-section" class="nav-link">Blog</a></li>-->
                                 <li><a href="#contact-section" class="nav-link">Contact</a></li>
-                                <li><a href="https://drive.google.com/file/d/1VBbCEKhiAua75u0V7i3bMiBJ9aMvEouc/view?usp=sharing" class="nav-link" target="_blank">Resume</a></li>
+                                <li><a href="https://drive.google.com/file/d/1PpzK_afXV_41ePPvaPgjzYL_toxqJBKC/view?usp=sharing" class="nav-link" target="_blank">Resume</a></li>
                             </ul>
                         </nav>
 
@@ -134,7 +134,26 @@
                             </div>
                         </div>
                     </div>
-
+                    <div class="col-md-6 mb-4">
+                        <div class="service d-flex h-100">
+                            <div class="service-number mr-4"><span class="icon-file"></span></div>
+                            <div class="service-about">
+                                <h3>Price Alert App</h3>
+                                <p>Scrapping shopping site frequently to get the price alert of a product in email.</p>
+                                <a href="#">more info</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 mb-4">
+                        <div class="service d-flex h-100">
+                            <div class="service-number mr-4"><span class="icon-clipboard "></span></div>
+                            <div class="service-about">
+                                <h3>To-Do App</h3>
+                                <p>Simple to-do list.</p>
+                                <a href="#">more info</a>
+                            </div>
+                        </div>
+                    </div>
 
 
                 </div>
@@ -257,64 +276,12 @@
                     </div>
                 </div>
                 <div class="col-12 position-relative">
-                    <h3 class="section-title text-center mb-5">For more follow me on <a href="https://www.instagram.com/ruffthawts/?hl=en" class="social-circle p-4"><span class="icon-instagram"></span></a></h3>
+                    <h3 class="section-title text-center mb-5">For more follow me on <a href="https://www.instagram.com/dasunilk/?hl=en class="social-circle p-4"><span class="icon-instagram"></span></a></h3>
                 </div>
 
             </div>
 
         </section>
-
-
-
-
-        <section class="site-section bg-light" id="blog-section" style="display:none">
-            <div class="container">
-                <div class="row">
-
-                    <div class="col-12 mb-5 position-relative">
-                        <h2 class="section-title text-center mb-5">Blog Posts</h2>
-                    </div>
-
-                    <div class="col-md-6 mb-5 mb-lg-0 col-lg-4">
-                        <div class="blog_entry">
-                            <a href="single.html"><img src="images/blog_1.jpg" alt="Image" class="img-fluid"></a>
-                            <div class="p-4 bg-white">
-                                <h3><a href="single.html">Why Photography Is Good For Business</a></h3>
-                                <span class="date">April 25, 2019</span>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit reprehenderit adipisci sed perferendis quia iure, aperiam ab?.</p>
-                                <p class="more"><a href="single.html">Read More</a></p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-6 mb-5 mb-lg-0 col-lg-4">
-                        <div class="blog_entry">
-                            <a href="single.html"><img src="images/blog_2.jpg" alt="Image" class="img-fluid"></a>
-                            <div class="p-4 bg-white">
-                                <h3><a href="single.html">Why Photography Is Good For Business</a></h3>
-                                <span class="date">April 25, 2019</span>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit reprehenderit adipisci sed perferendis quia iure, aperiam ab?.</p>
-                                <p class="more"><a href="single.html">Read More</a></p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-6 mb-5 mb-lg-0 col-lg-4">
-                        <div class="blog_entry">
-                            <a href="single.html"><img src="images/blog_3.jpg" alt="Image" class="img-fluid"></a>
-                            <div class="p-4 bg-white">
-                                <h3><a href="single.html">Why Photography Is Good For Business</a></h3>
-                                <span class="date">April 25, 2019</span>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit reprehenderit adipisci sed perferendis quia iure, aperiam ab?.</p>
-                                <p class="more"><a href="single.html">Read More</a></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-
         <section class="site-section bg-primary" id="contact-section">
             <div class="container">
                 <div class="row">
@@ -329,8 +296,8 @@
 
                         <h2 class="section-title text-center text-white mb-5"> Follow me </h2>
                         <div align="center">
-                            <a href="https://twitter.com/ruffthawts" class="social-circle text-center p-4" style="color:white"><span class="icon-twitter"></span></a>
-                            <a href="https://www.instagram.com/ruffthawts/?hl=en" class="social-circle p-4" style="color:white"><span class="icon-instagram"></span></a>
+                            <a href="https://twitter.com/dasunilk" class="social-circle text-center p-4" style="color:white"><span class="icon-twitter"></span></a>
+                            <a href="https://www.instagram.com/dasunilk/?hl=en" class="social-circle p-4" style="color:white"><span class="icon-instagram"></span></a>
 
                             <a href="https://www.linkedin.com/in/sunilkd/" class="social-circle p-4" style="color:white"><span class="icon-linkedin"></span></a>
 
