added the link for Github

--- a/index.html
+++ b/index.html
@@ -157,6 +157,12 @@
 
 
                 </div>
+                <div class="row ">
+                    <div class="col-12 position-relative">
+                       <h3 class="section-title text-center mb-5">For more follow me on <a href="https://github.com/sunilkdas" social-circle="" p-4"=""><span class="icon-github"></span></a></h3>
+    </div>
+
+                </div>
             </div>
         </div>
 
